@@ -168,6 +168,7 @@ X.XX - YYYY/MM/DD
 - Added F5 key to refresh grid contents updating original size (originfake).
 - Added CTRL-F5 key to reload grid contents. It will remove already optimized items, and then do a refresh (originfake).
 - Added support for Adobe Illustrator (AI) file types (maadjordan).
+- Dynamically adapt instruction text, stating if files will be backuped on Recycle Bin or not, according to settings (Armin Mueller).
 - Implemented heuristic detection of corrupted PDF after Ghostcript processing the encryption (Gonzalo).
 - Proper wording wording for "Mb." is "MiB". Thanks to Armin Mueller for the patch (Armin Mueller).
 - Made statistics use B, KiB, MiB o GiB automatically (Armin Mueller).
